fix bugs and add dark mode switcher

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,11 @@
+body {
+    background-color: #fff;
+}
+
+body.dark-theme {
+    background-color: #111;
+}
+
 #main-wrapper {
     display: flex;
     flex-direction: column;
@@ -25,14 +33,71 @@ article .text strong {
     font-size: 1.4em;
 }
 
+
+body.dark-theme article .text strong {
+    color: #fff;
+    font-size: 1.4em;
+}
+
+
 article .author {
     text-align: right;
-    color: #333;
+    color: #444;
     font-size: 1.4em;
 }
 
 footer {
     flex-shrink: 0;
     font-size: 0.85em;
-    color: #555;
+    color: #666;
+}
+
+a:link, a:visited, a:hover, a:active {
+    color: #666;
+}
+
+p.toggle {
+    display: inline-block;
+   position:relative;
+    top: 2px;
+}
+
+.toggle input[type='checkbox'] {
+    display: none;
+}
+
+.toggle label {
+    background-color: #888;
+    border: 1px solid #555;
+    border-radius: 10px;
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: all ease-in-out 0.3s;
+    width: 18px;
+    height: 10px;
+}
+
+.toggle label::after {
+    background-color: #555;
+    border-radius: 50%;
+    content: ' ';
+    cursor: pointer;
+    display: inline-block;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    transition: all ease-in-out 0.3s;
+    width: 10px;
+    height: 10px;
+}
+
+.toggle input[type='checkbox']:checked ~ label {
+    background-color: #888;
+    border-color: #aaa;
+}
+
+.toggle input[type='checkbox']:checked ~ label::after {
+    background-color: #fff;
+    transform: translateX(10px);
 }
